--- a/index.html
+++ b/index.html
@@ -19,30 +19,34 @@
               </div>
           </div>
           <div id="statusBar" class="statusBar">
-            <div class="total-progress">
-              <div id="totalProgressBar"
-                   class="total-progress-bar"
-                   role="progressbar"
-                   aria-valuenow="0"
-                   aria-valuemin="0"
-                   aria-valuemax="100" style="min-width: 2em;">
-                0%
+              <div class="total-progress">
+                  <div id="totalProgressBar"
+                       class="total-progress-bar"
+                       role="progressbar"
+                       aria-valuenow="0"
+                       aria-valuemin="0"
+                       aria-valuemax="100"
+                       style="min-width: 2em;">
+                    0%
+                  </div>
               </div>
-            </div>
-            <div class="start-uploader" style="padding-right:20px; float: right;">
-              <a id="startUpload" href="javascript:void(0);" class="text">开始上传</a>
-            </div>
+              <div class="start-uploader" style="padding-right:20px; float: right;">
+                  <a id="startUpload" href="javascript:void(0);" class="text">开始上传</a>
+              </div>
+              <div class="start-uploader" style="padding:0 20px; float: right;margin: 0 10px">
+                  <a id="addBtn" href="javascript:void(0);" class="text">继续添加</a>
+              </div>
+
           </div>
-          <div class="" style="clear: both;"> 
+          <div class="" style="clear: both;">
           </div>
       </div>
   </div>
-    <div class="container bs-docs-container">
-        <form id="form">
-            <input id="js-file" type="file" style="display:none;"  multiple="multiple"/>
-        </form>
-    </div>
-  <script src="./js/config.js"></script>  
+  <div class="container bs-docs-container">
+      <form id="form">
+          <input id="js-file" type="file" style="display:none;"  multiple="multiple"/>
+      </form>
+  </div>
   <script src="./js/jquery-2.2.4.min.js"></script>
    <!--  <script src="http://gosspublic.alicdn.com/aliyun-oss-sdk-4.4.4.min.js"></script> --> 
   <script src="./js/aliyun-oss-sdk.js"></script>
